--- a/frontend-librarie/package.json
+++ b/frontend-librarie/package.json
@@ -14,10 +14,12 @@
 		"@nextui-org/card": "^2.2.7",
 		"@nextui-org/code": "2.2.3",
 		"@nextui-org/dropdown": "2.3.3",
+		"@nextui-org/form": "^2.1.6",
 		"@nextui-org/image": "^2.2.3",
 		"@nextui-org/input": "2.4.3",
 		"@nextui-org/kbd": "2.2.3",
 		"@nextui-org/link": "2.2.3",
+		"@nextui-org/modal": "^2.2.5",
 		"@nextui-org/navbar": "2.2.3",
 		"@nextui-org/snippet": "2.2.4",
 		"@nextui-org/switch": "2.2.3",
