--- a/frontend-librarie/package.json
+++ b/frontend-librarie/package.json
@@ -23,6 +23,7 @@
 		"@nextui-org/link": "2.2.3",
 		"@nextui-org/modal": "^2.2.5",
 		"@nextui-org/navbar": "2.2.3",
+		"@nextui-org/popover": "^2.3.8",
 		"@nextui-org/snippet": "2.2.4",
 		"@nextui-org/switch": "2.2.3",
 		"@nextui-org/system": "2.4.3",
