--- a/frontend-librarie/package.json
+++ b/frontend-librarie/package.json
@@ -1,66 +1,66 @@
 {
-	"name": "vite-template",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "eslint -c .eslintrc.json ./src/**/**/*.{ts,tsx} --fix",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@nextui-org/accordion": "^2.2.5",
-		"@nextui-org/alert": "^2.2.7",
-		"@nextui-org/button": "2.2.3",
-		"@nextui-org/card": "^2.2.7",
-		"@nextui-org/code": "2.2.3",
-		"@nextui-org/dropdown": "2.3.3",
-		"@nextui-org/form": "^2.1.6",
-		"@nextui-org/image": "^2.2.3",
-		"@nextui-org/input": "2.4.3",
-		"@nextui-org/kbd": "2.2.3",
-		"@nextui-org/link": "2.2.3",
-		"@nextui-org/modal": "^2.2.5",
-		"@nextui-org/navbar": "2.2.3",
-		"@nextui-org/popover": "^2.3.8",
-		"@nextui-org/snippet": "2.2.4",
-		"@nextui-org/switch": "2.2.3",
-		"@nextui-org/system": "2.4.3",
-		"@nextui-org/theme": "2.4.1",
-		"@react-aria/visually-hidden": "3.8.12",
-		"@react-types/shared": "3.26.0",
-		"clsx": "2.1.1",
-		"framer-motion": "11.5.6",
-		"react": "18.3.1",
-		"react-dom": "^18.3.1",
-		"react-icons": "^5.4.0",
-		"react-router": "^7.0.2",
-		"react-router-dom": "6.23.0",
-		"tailwind-variants": "0.1.20",
-		"tailwindcss": "3.4.16"
-	},
-	"devDependencies": {
-		"@types/node": "20.5.7",
-		"@types/react": "18.3.3",
-		"@types/react-dom": "18.3.0",
-		"@typescript-eslint/eslint-plugin": "8.11.0",
-		"@typescript-eslint/parser": "8.11.0",
-		"@vitejs/plugin-react": "^4.2.1",
-		"autoprefixer": "10.4.19",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "9.1.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "5.2.1",
-		"eslint-plugin-react": "^7.23.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-unused-imports": "4.1.4",
-		"postcss": "8.4.38",
-		"prettier": "3.3.3",
-		"typescript": "5.6.3",
-		"vite": "^5.2.0",
-		"vite-tsconfig-paths": "^4.3.2"
-	}
+ "name": "vite-template",
+ "private": true,
+ "version": "0.0.0",
+ "type": "module",
+ "scripts": {
+  "dev": "vite",
+  "build": "tsc && vite build",
+  "lint": "eslint -c .eslintrc.json ./src/**/**/*.{ts,tsx} --fix",
+  "preview": "vite preview"
+ },
+ "dependencies": {
+  "@heroui/accordion": "2.2.8",
+  "@heroui/alert": "2.2.10",
+  "@heroui/button": "2.2.10",
+  "@heroui/card": "2.2.10",
+  "@heroui/code": "2.2.7",
+  "@heroui/dropdown": "2.3.10",
+  "@heroui/form": "2.1.9",
+  "@heroui/image": "2.2.6",
+  "@heroui/input": "2.4.10",
+  "@heroui/kbd": "2.2.7",
+  "@heroui/link": "2.2.8",
+  "@heroui/modal": "2.2.8",
+  "@heroui/navbar": "2.2.9",
+  "@heroui/popover": "2.3.10",
+  "@heroui/snippet": "2.2.11",
+  "@heroui/switch": "2.2.9",
+  "@heroui/system": "2.4.7",
+  "@heroui/theme": "2.4.6",
+  "@react-aria/visually-hidden": "3.8.12",
+  "@react-types/shared": "3.26.0",
+  "clsx": "2.1.1",
+  "framer-motion": "11.5.6",
+  "react": "18.3.1",
+  "react-dom": "^18.3.1",
+  "react-icons": "^5.4.0",
+  "react-router": "^7.0.2",
+  "react-router-dom": "6.23.0",
+  "tailwind-variants": "0.1.20",
+  "tailwindcss": "3.4.16"
+ },
+ "devDependencies": {
+  "@types/node": "20.5.7",
+  "@types/react": "18.3.3",
+  "@types/react-dom": "18.3.0",
+  "@typescript-eslint/eslint-plugin": "8.11.0",
+  "@typescript-eslint/parser": "8.11.0",
+  "@vitejs/plugin-react": "^4.2.1",
+  "autoprefixer": "10.4.19",
+  "eslint": "^8.57.0",
+  "eslint-config-prettier": "9.1.0",
+  "eslint-plugin-import": "^2.26.0",
+  "eslint-plugin-jsx-a11y": "^6.4.1",
+  "eslint-plugin-node": "^11.1.0",
+  "eslint-plugin-prettier": "5.2.1",
+  "eslint-plugin-react": "^7.23.2",
+  "eslint-plugin-react-hooks": "^4.6.0",
+  "eslint-plugin-unused-imports": "4.1.4",
+  "postcss": "8.4.38",
+  "prettier": "3.3.3",
+  "typescript": "5.6.3",
+  "vite": "^5.2.0",
+  "vite-tsconfig-paths": "^4.3.2"
+ }
 }
