--- a/frontend-librarie/package.json
+++ b/frontend-librarie/package.json
@@ -35,6 +35,7 @@
   "react": "18.3.1",
   "react-dom": "^18.3.1",
   "react-icons": "^5.4.0",
+  "react-responsive": "^10.0.0",
   "react-router": "^7.0.2",
   "react-router-dom": "6.23.0",
   "tailwind-variants": "0.1.20",
