--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd frontend-librairie
+          cd frontend-librarie
           npm ci
 
       - name: Build project
