--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build project
         run: |
-          cd frontend-librairie
+          cd frontend-librarie
           npm run build
 
       - name: Deploy to GitHub Pages
