--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -28,8 +28,7 @@ jobs:
           cd frontend-librarie
           npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: ./frontend-librairie/dist
+      - name: Deploy 🚀
+          uses: AurelieMous/github-pages-deploy-action@v4
+          with:
+            folder: dist
