--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3.0.1
         with:
-          path: ./frontend-librarie/build
+          path: ./frontend-librarie/dist
 
   # Job to deploy the built artifact to GitHub Pages
   deploy:
