--- a/frontend-librarie/package.json
+++ b/frontend-librarie/package.json
@@ -1,5 +1,6 @@
 {
  "name": "vite-template",
+ "homepage": "https://aureliemous.github.io/portfolio-react/",
  "private": true,
  "version": "0.0.0",
  "type": "module",
@@ -58,6 +59,7 @@
   "eslint-plugin-react": "^7.23.2",
   "eslint-plugin-react-hooks": "^4.6.0",
   "eslint-plugin-unused-imports": "4.1.4",
+  "gh-pages": "^6.3.0",
   "postcss": "8.4.38",
   "prettier": "3.3.3",
   "typescript": "5.6.3",
