github action -  npm install

--- a/.github/workflows/deploy-to-surge.yml
+++ b/.github/workflows/deploy-to-surge.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name : Build the project
         run: npm run build
       - name : Install Surge
