--- a/.github/workflows/deploy-to-surge.yml
+++ b/.github/workflows/deploy-to-surge.yml
@@ -17,7 +17,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: projet/frontend
+        working-directory: ./frontend-librarie
 
     steps:
       - name: Checkout
