--- a/frontend-librarie/package.json
+++ b/frontend-librarie/package.json
@@ -8,7 +8,8 @@
   "dev": "vite",
   "build": "tsc && vite build",
   "lint": "eslint -c .eslintrc.json ./src/**/**/*.{ts,tsx} --fix",
-  "preview": "vite preview"
+  "preview": "vite preview",
+  "postbuild": "cp dist/index.html dist/200.html"
  },
  "dependencies": {
   "@heroui/accordion": "2.2.8",
