fixed the homepage name

--- a/frontend-librarie/package.json
+++ b/frontend-librarie/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-template",
-  "homepage": "https://aureliemous.github.io/portfolio-react/",
+  "homepage": "https://linaaggoune.github.io/Portfolio.0.1/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
